Wed Oct  6 10:02:53 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/net.c: fix typo

Tue Oct  5 10:36:23 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/ctlib.h src/ctlib/cs.c src/ctlib/ct.c:
	* src/ctlib/unittests/t0006.c:
	- fix CS_VARCHAR_TYPE/CS_VARBINARY_TYPE on ctlib

Sat Oct  2 09:07:11 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/login.c:
	- avoid udp 1434 probe if port specified (patch from SF case
	  #3024141)

Fri Oct  1 10:28:46 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/ct.c: cleanup

Tue Sep 28 17:09:28 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/challenge.c: removed a warning compiling for big endian

Tue Sep 28 11:55:05 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/token.c: remove warning

Tue Sep 28 11:00:33 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* win32/FreeTDS_w.def: add missing exports

Tue Sep 28 10:19:51 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/mem.c: fix memory leak

Tue Sep 28 10:13:57 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/token.c: fix problem for UNI(VAR)CHAR encoding

Mon Sep 27 17:53:10 EDT 2010	JK Lowden <jklowden@freetds.org>
	* Nmakefile src/tds/config.c src/tds/mem.c
	- fix Win32 problems 

Mon Sep 27 09:25:08 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/replacements/iconv.c: add utf16 support to iconv replacement

Wed Sep 22 09:03:37 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/unittests/cancel.c src/dblib/unittests/done_handling.c:
	* src/odbc/unittests/array_out.c:
	- fix some portability issues with Solaris/SPARC (thanks to Peter
	  C. Norton)

Thu Sep 16 16:32:02 EDT 2010	JK Lowden <jklowden@freetds.org>
	* doc/bsqldb.txt src/apps/bsqldb.c
	- add -H hostname to override hostname sent to server

Thu Sep 16 14:30:15 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/dblib.c: